--- a/trunk/src/application/WiseRSS/WiseService/WiseService.csproj
+++ b/trunk/src/application/WiseRSS/WiseService/WiseService.csproj
@@ -63,6 +63,8 @@
   <ItemGroup>
     <EmbeddedResource Include="WiseService.resx">
       <DependentUpon>WiseService.cs</DependentUpon>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>WiseService1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
