--- a/trunk/lib/WiseRss library/CrossCutting.csproj
+++ b/trunk/lib/WiseRss library/CrossCutting.csproj
@@ -82,6 +82,78 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="boilerpipe-1.2.0">
+      <HintPath>..\..\src\references\boilerpipe-1.2.0.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Beans">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Beans.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Charsets">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Charsets.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Corba">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Corba.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Core">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Jdbc">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Jdbc.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Management">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Management.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Media">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Media.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Misc">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Misc.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Naming">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Naming.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Remoting">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Remoting.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Security">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.SwingAWT">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.SwingAWT.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Text">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Text.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Tools">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Tools.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Util">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.Util.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.API">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.API.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Bind">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.Bind.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Crypto">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Parse">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.Parse.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Transform">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.Transform.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.WebServices">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.WebServices.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.XPath">
+      <HintPath>..\..\src\references\IKVM.OpenJDK.XML.XPath.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.Runtime">
+      <HintPath>..\..\src\references\IKVM.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -89,11 +161,14 @@
       <Name>System.Data</Name>
     </Reference>
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Async.cs" />
+    <Compile Include="Boilerpipe.cs" />
     <Compile Include="Collections\ExceptionCollection.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -108,6 +183,7 @@
     <Compile Include="Collections\RssFeedCollection.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Collections\RssImageCollection.cs" />
     <Compile Include="Collections\RssItemCollection.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -116,9 +192,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Collections\RssModuleItemCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Collections\RssModuleItemCollectionCollection.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Collections\RssTextInputCollection.cs" />
@@ -162,15 +235,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="RssModuleItem.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="RssModules\RssBlogChannel.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="RssModules\RssCreativeCommon.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="RssModules\RssPhotoAlbum.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="RssReader.cs">
