--- a/src/application/WiseRSS/Business/Business.csproj
+++ b/src/application/WiseRSS/Business/Business.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="WiseRSSLib">
       <HintPath>..\..\..\references\WiseRSSLib.dll</HintPath>
       <Private>True</Private>
